@@ -25,9 +25,11 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -65,38 +67,42 @@ public class OpeningHoursService {
 
     @Transactional
     public List<OpeningHoursResponse> upsertWeeklySchedule(List<OpeningHoursRequest> request) {
-        businessGuard.requireOwnerOrManager();
-        Long businessId = getBusinessIdFromContext();
-        Business business = businessRepository.findById(businessId)
-                .orElseThrow(() -> new ResourceNotFoundException("Business not found"));
 
         if (request.size() != 7) {
             throw new IllegalArgumentException("The weekly schedule must contain exactly 7 days.");
         }
 
-        List<OpeningHours> rulesToSave = request.stream().map(dto -> {
-            Optional<OpeningHours> existingRuleOpt = openingHoursRepository.
-                    findByTypeRuleAndDayOfWeekAndBusinessIdAndBarberIsNull(TypeRule.RECURRING, dto.dayOfWeek(), businessId);
+        Long businessId = getBusinessIdFromContext();
+        businessGuard.requireOwnerOrManager();
 
-            OpeningHours entity;
-            if (existingRuleOpt.isPresent()) {
-                entity = existingRuleOpt.get();
+        Business business = businessRepository.getReferenceById(businessId);
+
+        List<OpeningHours> existingSchedules = openingHoursRepository.findAllByTypeRuleAndBusinessIdAndBarberIsNull(TypeRule.RECURRING, businessId);
+
+        Map<DayOfWeek, OpeningHours> existingMap = existingSchedules.stream()
+                .collect(Collectors.toMap(OpeningHours::getDayOfWeek, schedule -> schedule));
+
+        List<OpeningHours> rulesToSave = request.stream().map(dto -> {
+
+            OpeningHours entity = existingMap.get(dto.dayOfWeek());
+
+            if (entity != null) {
                 openingHoursMapper.updateEntityFromRequest(entity, dto);
             } else {
                 entity = openingHoursMapper.toEntity(dto);
+                entity.setTypeRule(TypeRule.RECURRING);
+                entity.setBusiness(business);
+                entity.setBarber(null);
             }
 
-            entity.setTypeRule(TypeRule.RECURRING);
-            entity.setBusiness(business);
-            entity.setBarber(null);
             return entity;
-        }).collect(Collectors.toList());
+        }).toList();
 
         List<OpeningHours> savedRules = openingHoursRepository.saveAll(rulesToSave);
 
         return savedRules.stream()
                 .map(openingHoursMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<OpeningHoursResponse> findForDate(LocalDate date) {
@@ -141,7 +147,9 @@ public class OpeningHoursService {
 
     @Transactional
     public SpecificDateResponse createSpecificDate(SpecificDateRequest request) {
+
         businessGuard.requireOwnerOrManager();
+
         Long businessId = getBusinessIdFromContext();
         Business business = businessRepository.findById(businessId)
                 .orElseThrow(() -> new ResourceNotFoundException("Business not found")); 
@@ -160,7 +168,9 @@ public class OpeningHoursService {
 
     @Transactional
     public SpecificDateResponse updateSpecificDate(Long id, SpecificDateRequest request) {
+
         businessGuard.requireOwnerOrManager();
+
         Long businessId = getBusinessIdFromContext();
 
         OpeningHours existingSpecificDate = openingHoursRepository.findByIdAndBusinessId(id, businessId)
@@ -175,7 +185,9 @@ public class OpeningHoursService {
 
     @Transactional
     public void deleteSpecificDate(Long id) {
+
         businessGuard.requireOwnerOrManager();
+
         Long businessId = getBusinessIdFromContext();
 
 
@@ -197,61 +209,52 @@ public class OpeningHoursService {
 
     @Transactional
     public List<OpeningHoursResponse> upsertBarberWeeklySchedule(Long barberId, List<OpeningHoursRequest> request, AppUser currentUser) {
-        Long businessId = getBusinessIdFromContext();
-
-        BusinessRole role = BusinessContext.getRole().orElseThrow(
-                () -> new ResourceNotFoundException("Role not found")
-        );
-
-        boolean isOwnerOrManager = BusinessRole.OWNER.equals(role) || BusinessRole.MANAGER.equals(role);
-        boolean isSelf = currentUser.getId().equals(barberId);
-
-        if (!isOwnerOrManager && !isSelf) {
-            throw new SecurityException("Unauthorized to update this schedule");
-        }
-
-        Business business = businessRepository.findById(businessId)
-                .orElseThrow(() -> new ResourceNotFoundException("Business not found"));
-        
-        AppUser barber = userRepository.findById(barberId)
-                .orElseThrow(() -> new ResourceNotFoundException("Barber not found"));
-
-        // Validate if user is actually a barber in this business
-        boolean isBarber = userBusinessRepository.existsByUserIdAndBusinessIdAndRole(barberId, businessId, BusinessRole.BARBER) ||
-                           userBusinessRepository.existsByUserIdAndBusinessIdAndRole(barberId, businessId, BusinessRole.OWNER) ||
-                           userBusinessRepository.existsByUserIdAndBusinessIdAndRole(barberId, businessId, BusinessRole.MANAGER);
-        
-        if (!isBarber) {
-             throw new ResourceNotFoundException("User is not a member of this business");
-        }
-
         if (request.size() != 7) {
             throw new IllegalArgumentException("The weekly schedule must contain exactly 7 days.");
         }
 
-        List<OpeningHours> rulesToSave = request.stream().map(dto -> {
-            Optional<OpeningHours> existingRuleOpt = openingHoursRepository.
-                    findByTypeRuleAndDayOfWeekAndBusinessIdAndBarberId(TypeRule.RECURRING, dto.dayOfWeek(), businessId, barberId);
+        Long businessId = getBusinessIdFromContext();
 
-            OpeningHours entity;
-            if (existingRuleOpt.isPresent()) {
-                entity = existingRuleOpt.get();
+        if (!businessGuard.isOwnerOrManager() && !currentUser.getId().equals(barberId)) {
+            throw new SecurityException("Unauthorized to update this schedule.");
+        }
+
+        List<BusinessRole> allowedRoles = List.of(BusinessRole.BARBER, BusinessRole.MANAGER, BusinessRole.OWNER);
+        boolean isValidBarber = userBusinessRepository.existsByUserIdAndBusinessIdAndRoleIn(barberId, businessId, allowedRoles);
+
+        if (!isValidBarber) {
+            throw new IllegalArgumentException("The specified user is not an active barber in this business.");
+        }
+
+        Business business = businessRepository.getReferenceById(businessId);
+        AppUser barber = userRepository.getReferenceById(barberId);
+
+        List<OpeningHours> existingSchedules = openingHoursRepository
+                .findAllByTypeRuleAndBusinessIdAndBarberId(TypeRule.RECURRING, businessId, barberId);
+
+        Map<DayOfWeek, OpeningHours> existingMap = existingSchedules.stream()
+                .collect(Collectors.toMap(OpeningHours::getDayOfWeek, schedule -> schedule));
+
+        List<OpeningHours> rulesToSave = request.stream().map(dto -> {
+            OpeningHours entity = existingMap.get(dto.dayOfWeek());
+
+            if (entity != null) {
                 openingHoursMapper.updateEntityFromRequest(entity, dto);
             } else {
                 entity = openingHoursMapper.toEntity(dto);
+                entity.setTypeRule(TypeRule.RECURRING);
+                entity.setBusiness(business);
+                entity.setBarber(barber);
             }
 
-            entity.setTypeRule(TypeRule.RECURRING);
-            entity.setBusiness(business);
-            entity.setBarber(barber);
             return entity;
-        }).collect(Collectors.toList());
+        }).toList();
 
         List<OpeningHours> savedRules = openingHoursRepository.saveAll(rulesToSave);
 
         return savedRules.stream()
                 .map(openingHoursMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<OpeningHoursResponse> findForBarberAndDate(Long barberId, LocalDate date) {
